--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -3,11 +3,11 @@ doctype html
 html
     head
         meta(charset="utf-8")
-        link(rel="shortcut icon", href="/favicon.ico")
+        link(rel="shortcut icon", href="/icon.png")
         meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
         meta(name="theme-color", content="#000000")
         title #{title} | School Portal
-        link(rel="stylesheet" href="../../public/styles.css")
+        link(rel="stylesheet" type="text/css" href="/style.css")
     body
         div#root
             block layout-content
