Add background image for welcome view

--- a/public/style.css
+++ b/public/style.css
@@ -140,3 +140,8 @@ a {
     border-bottom: var(--ui-shadow-border);
     box-shadow: var(--ui-shadow);
 }
+
+.WelcomeView {
+    background: url("school.jpg") left center;
+    background-size: cover;
+}
