Add LogIn button

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block layout-content
-    div.View
+    div.View.WelcomeView
         h1.Banner School Portal
         div.Message
             div.Title
@@ -10,4 +10,4 @@ block layout-content
             span.Details Access the School Portal now!
         div.NavButtons
             a(href="/user")
-                div.NavButton Just dive in!
+                div.NavButton Log In!
