Change text: Log In! to Log In

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -10,4 +10,4 @@ block layout-content
             span.Details Access the School Portal now!
         div.NavButtons
             a(href="/user")
-                div.NavButton Log In!
+                div.NavButton Log In
